# labs

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SETUP.md  build-structure.sh  courses.json
automation_devops_sre/: README.md
automation_devops_sre/jenkins/: README.md
automation_devops_sre/kubernetes/: README.md
automation_devops_sre/kubernetes/docs/: 01-INTRODUCTION.md  02-DEPLOYMENTS.md  03-SERVICES.md  04-CONFIGMAPS-SECRETS.md  05-STORAGE.md  06-INGRESS.md  07-HELM.md
automation_devops_sre/nixos/: CURRICULUM.md  DELIVERY.md  EXPANDED_DELIVERY.md  INDEX.md  NETWORKING_EXPANSION.md  QUICKSTART.md  README.md  STRUCTURE.txt
automation_devops_sre/nixos/00-foundation/: 01-what-is-nix.md  02-what-is-nixos.md  03-nix-language-basics.md  04-linux-networking-basics.md  ascii-diagrams.md
automation_devops_sre/nixos/reference/: debugging-nix.md  frr-bird-examples.md
coding/go/: README copy.md
coding/go/docs/: GO_CHEAT_SHEET.md  GO_COMPLETE_COURSE_PART1.md  GO_COMPLETE_COURSE_PART2.md  GO_COMPLETE_COURSE_PART3.md  GO_COMPLETE_COURSE_PART4.md  GO_COMPLETE_COURSE_PART5_TRACEROUTE.md
coding/python/: README.md
coding/python/docs/: PYTHON_PART1_FUNDAMENTALS.md  PYTHON_PART2_INTERMEDIATE.md  (+6 more)
coding/rust/ebpf-sidecar/sidecar/: Cargo.toml
coding/rust/ebpf-sidecar/sidecar-ebpf/: Cargo.toml
coding/rust/ebpf-sidecar/sidecar-ebpf/src/: main.rs
coding/rust/ebpf-sidecar/sidecar/src/: config.rs  main.rs  metrics.rs
networking/: bgp_convergence.md  ebpf_comprehensive_overview.md  ipv6.md  lab_exercises_and_templates.md  linux_networking_stack_review.md
(+28 files in other folders)
