[package]
name = "sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sidecar"
path = "src/main.rs"

[dependencies]
# eBPF loading and map access
aya = "0.12"
aya-log = "0.2"

# Shared types
sidecar-common = { path = "../sidecar-common", features = ["user"] }

# Async runtime
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time", "net"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Logging
log = "0.4"
env_logger = "0.10"

# Prometheus metrics export
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal"] }
lazy_static = "1.4"
